feat:route /user/register for magic-link
