# public/swagger.json
@@ -464,16 +464,26 @@
 						}
 					}
 				]
-			},
+			}
+		},
+		"/user/register": {
 			"post": {
-				"operationId": "CreateUser",
+				"operationId": "RegisterUser",
 				"responses": {
 					"200": {
 						"description": "Ok",
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/ICreateResponse"
+									"properties": {
+										"ok": {
+											"type": "boolean"
+										}
+									},
+									"required": [
+										"ok"
+									],
+									"type": "object"
 								}
 							}
 						}
